# Pulse

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  dist-workspace.toml
.github/workflows/: ci.yml
src/: app.rs  config.rs  event.rs  init.rs  lib.rs  main.rs  menubar.rs  metrics.rs  scanner.rs  session.rs  watcher.rs
src/providers/: claude.rs  codex.rs  copilot.rs  mod.rs
src/ui/: feed.rs  focus.rs  mod.rs  sessions.rs  stats.rs
